Fix margin for announcements on mobile

--- a/assets/css/media-queries/_width.scss
+++ b/assets/css/media-queries/_width.scss
@@ -186,6 +186,11 @@
         font-size: smaller;
     }
 
+    #announcement {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
     article.author,
     article.translator {
         header {
